objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Carbs__c</fullName>
        <label>Carbs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Eggs</fullName>
                </value>
                <value>
                    <fullName>Meat</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Fats</fullName>
                </value>
                <value>
                    <fullName>Wheat</fullName>
                </value>
                <value>
                    <fullName>Vegtables</fullName>
                </value>
                <value>
                    <fullName>Fruits</fullName>
                </value>
                <value>
                    <fullName>Nuts</fullName>
                </value>
                <value>
                    <fullName>Sugar</fullName>
                </value>
                <value>
                    <fullName>Drinks</fullName>
                </value>
                <value>
                    <fullName>Ready Meals</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Suplements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fat__c</fullName>
        <label>Fat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kcal__c</fullName>
        <label>Kcal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protein__c</fullName>
        <label>Protein</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <label>Sub category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Milk</fullName>
                </value>
                <value>
                    <fullName>Cream</fullName>
                </value>
                <value>
                    <fullName>Milk drinks</fullName>
                </value>
                <value>
                    <fullName>Cheeses</fullName>
                </value>
                <value>
                    <fullName>Icecream</fullName>
                </value>
                <value>
                    <fullName>Eggs</fullName>
                </value>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Veal</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Goose</fullName>
                </value>
                <value>
                    <fullName>Chicken</fullName>
                </value>
                <value>
                    <fullName>Cold Cuts</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Smoked Fish</fullName>
                </value>
                <value>
                    <fullName>Fats</fullName>
                </value>
                <value>
                    <fullName>Flour</fullName>
                </value>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Bread</fullName>
                </value>
                <value>
                    <fullName>Fresh</fullName>
                </value>
                <value>
                    <fullName>Iced</fullName>
                </value>
                <value>
                    <fullName>Drinks and juices</fullName>
                </value>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>Soups</fullName>
                </value>
                <value>
                    <fullName>Cookies</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <inlineHelpText>Weight in gramms</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>